--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   lint: ^1.6.0
   table_calendar: ^3.0.2
   image_picker: ^0.8.4+3
+  syncfusion_flutter_charts: ^19.4.38
 
   #Library helpful
   intl: ^0.17.0
