--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,12 +55,14 @@ dependencies:
 
   carousel_slider: ^4.0.0-nullsafety.0
   dots_indicator: ^2.0.0
+  dotted_border:
   #svg
   flutter_svg: ^0.22.0
   cupertino_icons: ^1.0.2
   dart_ipify: ^1.1.0
   crypto: ^3.0.1
   shimmer: ^2.0.0
+
 
   # GETX
   get: ^4.1.4
