--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   table_calendar: ^3.0.2
   image_picker: ^0.8.4+3
   syncfusion_flutter_charts: ^19.4.38
+  flutter_rounded_date_picker: ^2.0.2
 
   #Library helpful
   intl: ^0.17.0
