--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   image_picker: ^0.8.4+3
   syncfusion_flutter_charts: ^19.4.38
   flutter_rounded_date_picker: ^2.0.2
+  syncfusion_flutter_calendar: ^19.4.40
+  date_format: ^2.0.2
 
   #Library helpful
   intl: ^0.17.0
