--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   logger: any
   rxdart: ^0.27.1
+  permission_handler: ^8.1.4+2
+  file_picker: ^4.0.2
+  cool_alert: ^1.1.0
   expandable: 5.0.1
   sliding_up_panel: ^2.0.0+1
   local_hero: ^0.2.0
