--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   syncfusion_flutter_calendar: ^19.4.40
   date_format: ^2.0.2
   pin_code_fields: ^7.3.0
-  keyboard_dismisser: ^2.0.0
+
 
 
   #Library helpful
@@ -79,6 +79,7 @@ dependencies:
   injectable: ^1.4.1
   freezed: ^0.14.2
   tuple: ^2.0.0
+  file_picker: ^4.3.1
 
 dev_dependencies:
   flutter_test:
