--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   date_format: ^2.0.2
   pin_code_fields: ^7.3.0
   keyboard_dismisser: ^2.0.0
-
+  sticky_headers: ^0.2.0
   #Library helpful
   intl: ^0.17.0
   event_bus: ^2.0.0
