--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   fluttertoast: ^8.0.3
   retrofit: ^2.0.1
   json_annotation: ^4.0.1
-  flutter_screenutil: ^5.0.0
+  flutter_screenutil: 5.0.0
   cached_network_image: ^3.0.0
   smooth_page_indicator: ^0.3.0-nullsafety.0
   flutter_staggered_grid_view: ^0.4.0
