--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   device_info: ^2.0.0
   flutter_bloc: ^7.0.0
   package_info: ^2.0.0
-  google_fonts: ^2.0.0
+  google_fonts: 2.0.0
   connectivity: ^3.0.3
   url_launcher: ^6.0.5
   path_provider: ^2.0.1
