--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_html: ^2.1.1
   auto_size_text: ^3.0.0-nullsafety.0
   optimized_cached_image: ^3.0.0
+  get_it: ^7.2.0
 
   #Favourite library
   share: ^2.0.1
