fix version flutter toast

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   #Favourite library
   share: ^2.0.1
   provider: ^5.0.0
-  device_info: ^2.0.0
+  device_info: 2.0.0
   flutter_bloc: ^7.0.0
   package_info: ^2.0.0
   google_fonts: 2.0.0
@@ -45,7 +45,7 @@ dependencies:
   intl: ^0.17.0
   event_bus: ^2.0.0
   equatable: ^2.0.0
-  fluttertoast: ^8.0.3
+  fluttertoast: 8.0.3
   retrofit: ^2.0.1
   json_annotation: ^4.0.1
   flutter_screenutil: 5.0.0
