--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,12 +26,13 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.edsolabs.ccvc_mobile"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
