--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,7 @@ dev_dependencies:
     sdk: flutter
   retrofit_generator: any
   hive_generator:
-  build_runner:  #flutter pub run build_runner build --delete-conflicting-outputsflutter pub run build_runner build --delete-conflicting-outputs
+  build_runner:  #flutter pub run build_runner build --delete-conflicting-outputs
   json_serializable: ^4.1.0
   injectable_generator: ^1.4.1
   flutter_lints: ^1.0.0
