--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   logger: any
   rxdart: ^0.27.1
   hive: ^2.0.5
+  just_audio: ^0.9.20
 
   #  permission_handler: ^8.1.4+2
   file_picker: ^4.0.2
