--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   rxdart: ^0.27.1
   hive: ^2.0.5
   speech_to_text: 5.4.3
+  flutter_tts: ^3.3.3
 
   #  permission_handler: ^8.1.4+2
   file_picker: ^4.0.2
