--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   cool_alert: ^1.1.0
   expandable: 5.0.1
   queue: ^3.1.0+1
+  readmore: any
 
   dots_indicator: ^2.0.0
   dotted_border:
