--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   package_info: ^2.0.0
   google_fonts: 2.0.0
   connectivity: ^3.0.3
-  url_launcher: ^6.0.5
+  url_launcher:
   path_provider: ^2.0.1
   webview_flutter: ^2.0.10
   shared_preferences: ^2.0.5
@@ -82,6 +82,7 @@ dependencies:
   tuple: ^2.0.0
   html_editor_enhanced: ^2.4.0+1
   translator: ^0.1.7
+  flutter_contacts:
 
 dev_dependencies:
   flutter_test:
