--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,15 +94,16 @@ dev_dependencies:
   injectable_generator: ^1.4.1
   flutter_lints: ^1.0.0
 
+  #firebase
+  firebase_auth: ^3.3.8
+  firebase_core: ^1.10.0
+
+
 flutter:
   uses-material-design: true
   assets:
-    - lib/home_module/assets/images/
-    - lib/tien_ich_module/assets/images/
     - assets/images/
     - assets/menu/
     - assets/style/
-    - lib/ket_noi_module/assets/images/
-    - lib/nhiem_vu_module/assets/images/
 flutter_intl:
   enabled: true
