add image widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,14 @@ dependencies:
   optimized_cached_image: ^3.0.0
   permission_handler: ^8.1.4+2
 
+  #state manager
+  flutter_bloc: ^8.0.1
+
   #Favourite library
   share: ^2.0.1
-  provider: ^5.0.0
+ # provider: ^5.0.0
   device_info: 2.0.0
-  flutter_bloc: ^7.0.0
+
   package_info: ^2.0.0
   google_fonts: 2.0.0
   connectivity: ^3.0.3
@@ -45,7 +48,7 @@ dependencies:
   #Library helpful
   intl: ^0.17.0
   event_bus: ^2.0.0
-  equatable: ^2.0.0
+  equatable: ^2.0.3
   fluttertoast: 8.0.3
   retrofit: ^2.0.1
   json_annotation: ^4.0.1
