--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,7 @@ android {
     compileSdkVersion 31
 
     defaultConfig {
-        applicationId "com.edsolabs.ccvc_mobile"
+        applicationId "com.edsolabs.ccvc_mobile.develop"
         minSdkVersion 23
         targetSdkVersion 31
         multiDexEnabled true
