--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
  # provider: ^5.0.0
   device_info: 2.0.0
 
+  shimmer:
+
   package_info: ^2.0.0
   google_fonts: 2.0.0
   connectivity: ^3.0.3
