--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,7 +102,8 @@ dev_dependencies:
   #firebase
   firebase_auth: ^2.0.0
   firebase_core: ^1.10.0
-
+  cloud_firestore: ^3.1.4
+  firebase_storage: ^10.2.3
 
 flutter:
   uses-material-design: true
