--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,13 +98,12 @@ dev_dependencies:
   json_serializable: ^4.1.0
   injectable_generator: ^1.4.1
   flutter_lints: ^1.0.0
-
   #firebase
   firebase_auth: ^2.0.0
   firebase_core: ^1.10.0
-  cloud_firestore: ^3.1.4
-  firebase_storage: ^10.2.3
-
+  cloud_firestore: ^3.1.8
+  firebase_storage: ^10.2.8
+  firebase_messaging: 10.0.9
 flutter:
   uses-material-design: true
   assets:
