--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,27 +42,17 @@ dependencies:
   firebase_core: ^1.16.0
   firebase_storage: ^10.2.15
   cloud_firestore: ^3.1.14
-
-
-
-
+  lottie: ^1.3.0
   package_info: ^2.0.0
   google_fonts: 2.0.0
   connectivity: ^3.0.3
   url_launcher:
   path_provider: ^2.0.1
-  webview_flutter: ^2.0.10
   shared_preferences: ^2.0.5
   lint: ^1.6.0
-  table_calendar: ^3.0.2
   image_picker: ^0.8.4+3
-  syncfusion_flutter_charts: ^19.4.38
-  flutter_rounded_date_picker: ^2.0.2
-  syncfusion_flutter_calendar: ^19.4.40
   date_format: ^2.0.2
-  pin_code_fields: ^7.3.0
   keyboard_dismisser: ^2.0.0
-  sticky_headers: ^0.2.0
   #Library helpful
   intl: ^0.17.0
   event_bus: ^2.0.0
@@ -71,23 +61,14 @@ dependencies:
   json_annotation: ^4.0.1
   flutter_screenutil: 5.0.0
   cached_network_image: ^3.0.0
-  flutter_staggered_grid_view: ^0.4.0
   logger: any
   rxdart: ^0.27.1
   hive: ^2.0.5
-  just_audio: ^0.9.20
- # speech_to_text: 5.4.3
-  flutter_tts: ^3.3.3
 
   #  permission_handler: ^8.1.4+2
   file_picker: ^4.0.2
-  cool_alert: ^1.1.0
-  expandable: 5.0.1
   queue: ^3.1.0+1
-  readmore: any
 
-  dots_indicator: ^2.0.0
-  dotted_border:
   #svg
   flutter_svg: ^0.22.0
   cupertino_icons: ^1.0.2
@@ -100,9 +81,8 @@ dependencies:
   injectable: ^1.4.1
   freezed: ^0.14.2
   tuple: ^2.0.0
-  html_editor_enhanced: ^2.4.0+1
-  translator: ^0.1.7
-  flutter_contacts:
+  firebase_auth: ^2.0.0
+  firebase_messaging: 10.0.9
 
 dev_dependencies:
   flutter_test:
@@ -113,12 +93,7 @@ dev_dependencies:
   json_serializable: ^4.1.0
   injectable_generator: ^1.4.1
   flutter_lints: ^1.0.0
-  #firebase
-  firebase_auth: ^2.0.0
-  firebase_core: ^1.10.0
-  cloud_firestore: ^3.1.8
-  firebase_storage: ^10.2.8
-  firebase_messaging: 10.0.9
+
 flutter:
   uses-material-design: true
   assets:
