--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_html: ^2.1.1
   auto_size_text: ^3.0.0-nullsafety.0
   optimized_cached_image: ^3.0.0
-  permission_handler: ^8.1.4+2
+#  permission_handler: ^8.1.4+2
 
   #state manager
   flutter_bloc: ^8.0.1
@@ -35,7 +35,7 @@ dependencies:
 
   uuid: ^3.0.5
   fluttertoast: 8.0.3
-
+  draggable_bottom_sheet: ^0.1.2
   adaptive_dialog: ^1.5.0
 
   #firebase
@@ -53,15 +53,15 @@ dependencies:
   webview_flutter: ^2.0.10
   shared_preferences: ^2.0.5
   lint: ^1.6.0
-  table_calendar: ^3.0.2
+#  table_calendar: ^3.0.2
   image_picker: ^0.8.4+3
-  syncfusion_flutter_charts: ^19.4.38
+#  syncfusion_flutter_charts: ^19.4.38
   flutter_rounded_date_picker: ^2.0.2
-  syncfusion_flutter_calendar: ^19.4.40
+#  syncfusion_flutter_calendar: ^19.4.40
   date_format: ^2.0.2
-  pin_code_fields: ^7.3.0
+#  pin_code_fields: ^7.3.0
   keyboard_dismisser: ^2.0.0
-  sticky_headers: ^0.2.0
+#  sticky_headers: ^0.2.0
   #Library helpful
   intl: ^0.17.0
   event_bus: ^2.0.0
@@ -74,19 +74,21 @@ dependencies:
   logger: any
   rxdart: ^0.27.1
   hive: ^2.0.5
-  just_audio: ^0.9.20
+  camera: 0.9.8+1
+  photo_manager: ^2.1.2
+#  just_audio: ^0.9.20
   # speech_to_text: 5.4.3
-  flutter_tts: ^3.3.3
+#  flutter_tts: ^3.3.3
 
-  #  permission_handler: ^8.1.4+2
+  permission_handler: ^8.1.4+2
   file_picker: ^4.0.2
   cool_alert: ^1.1.0
   expandable: 5.0.1
   queue: ^3.1.0+1
-  readmore: any
+#  readmore: any
 
-  dots_indicator: ^2.0.0
-  dotted_border:
+#  dots_indicator: ^2.0.0
+#  dotted_border:
   #svg
   flutter_svg: ^0.22.0
   cupertino_icons: ^1.0.2
