--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   fluttertoast: 8.0.3
   draggable_bottom_sheet: ^0.1.2
   adaptive_dialog: ^1.5.0
+  lottie: ^1.4.0
+  flare_flutter: ^3.0.2
+  encrypt: ^5.0.1
 
   #firebase
   firebase_auth: ^2.0.0
@@ -83,7 +86,7 @@ dependencies:
 
   permission_handler: ^8.1.4+2
   file_picker: ^4.0.2
-  cool_alert: ^1.1.0
+#  cool_alert: ^1.1.0
   expandable: 5.0.1
   queue: ^3.1.0+1
 #  readmore: any
@@ -103,8 +106,8 @@ dependencies:
   freezed: ^0.14.2
   tuple: ^2.0.0
   html_editor_enhanced: ^2.4.0+1
-  translator: ^0.1.7
-  flutter_contacts:
+#  translator: ^0.1.7
+#  flutter_contacts:
 
 dev_dependencies:
   flutter_test:
