--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   rxdart: ^0.27.1
   hive: ^2.0.5
   camera: 0.9.8+1
+  camera_avfoundation: ^0.9.8+2
   photo_manager: ^2.1.2
 #  just_audio: ^0.9.20
   # speech_to_text: 5.4.3
