--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:icon="@mipmap/ic_launcher"
-        android:label="ccvc_mobile"
+        android:label="Socially"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true">
         <activity
