--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lottie: ^1.4.0
   flare_flutter: ^3.0.2
   encrypt: ^5.0.1
+  flutter_linkify: ^5.0.2
 
   #firebase
   firebase_auth: ^2.0.0
