--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cloud_firestore: ^3.1.8
   firebase_storage: ^10.2.8
   firebase_messaging: 10.0.9
+  firebase_core_platform_interface: 4.5.1
 
   package_info: ^2.0.0
   google_fonts: 2.0.0
@@ -78,7 +79,7 @@ dependencies:
   camera_avfoundation: ^0.9.8+2
   photo_manager: ^2.1.2
 
-  permission_handler: ^8.1.4+2
+  permission_handler: ^10.2.0
   file_picker: ^4.0.2
   expandable: 5.0.1
   queue: ^3.1.0+1
