--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flare_flutter: ^3.0.2
   encrypt: ^5.0.1
   flutter_linkify: ^5.0.2
+  mailer: ^5.3.0
+  otp: ^3.1.3
+  otp_text_field: ^1.1.3
 
   #firebase
   firebase_auth: ^2.0.0
